5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1575_1332.log
== TEST (2019-03-12 11:56:56) 
-- CODE:
aresta =5
area = (3/2)*(3*5)**1/5
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:57:03) 
-- CODE:
aresta =5
area = (3/2)*(3*5)**1/5
 
print(round(area, 4))
-- EXECUTION TIME:
0.195303
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:23) 
-- CODE:
aresta =5
area = (3/2)(3*5)**1/5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)(3*5)**1/5
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:50) 
-- CODE:
aresta =5cm
area = (3/2)(3*aresta)**1/2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:02) 
-- CODE:
aresta =5
area = (3/2)(3*aresta)**1/2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)(3*aresta)**1/2
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:16) 
-- CODE:
aresta =5
area = (3/2)*(3*aresta)**1/2
 
print(round(area, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:21) 
-- CODE:
aresta =5
area = (3/2)*(3*aresta)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.174346
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:27) 
-- CODE:
aresta =5
area =(3/2)*(3*aresta)**1/2
 
print(round(area, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:29) 
-- CODE:
aresta =5
area =(3/2)*(3*aresta)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.153918
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:56) 
-- CODE:
aresta =5
area =(3/2)*(3*aresta)**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:15) 
-- CODE:
aresta =5
area =(3/2)*(3*aresta**2)**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:07) 
-- CODE:
aresta =5
area =(3/2)*(3*5**2)**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:01:17) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:01:24) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.135264
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
